# pywax

./: README.md  flake.nix  pyproject.toml
.github/workflows/: lint.yaml  pypi.yaml
src/pywax/: __init__.py  __main__.py  cli.py  client.py
